--- a/student_management_app/templates/hod_template/footer.html
+++ b/student_management_app/templates/hod_template/footer.html
@@ -1,7 +1,4 @@
 <footer class="main-footer">
-      <strong>Copyright &copy; {% now "Y" %}, <a href="https://itsourcecode.com">ITSOURCECODE</a>.</strong> 
-      All rights reserved.
-      <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 1.0
-      </div>
-    </footer>
+  <strong>Copyright &copy; {% now "Y" %}, <a href="https://amitportfolio55.herokuapp.com/">AMIT CHAKRABORTY</a>.</strong> 
+  All rights reserved.
+</footer>
