--- a/student_management_app/templates/login.html
+++ b/student_management_app/templates/login.html
@@ -2,16 +2,53 @@
 {% load static %} 
 
 {% block content %}
+<style>
+  .login-form {
+    border-radius: 10px;
+  }
+  .login-card-body {
+    background-color: #FFFFFF;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    border-radius: 10px !important;
+    padding: 0px;
+  }
+  .login-card-body p {
+    background-color: #2e364a;
+    color: white;
+    font-size: 25px;
+    border-radius: 10px 10px 0px 0px;
+    padding: 20px;
+  }
+  .login-card-body form {
+    padding: 20px;
+  }
+  .sign-button{
+    background-color: #2e364a;
+    color: #ffffff;
+    /* font-size: 18px; */
+    border-radius: 20px;
+    transform: scale(0.96);
+  }
+  .sign-button:hover{
+      background-color: #242b3b;
+      border-radius: 23px;
+      -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1); /* IE 9 */
+      transform: scale(1);
+      transition: all 0.3s ease-in-out 0s;
+      box-shadow: 0 0 10px #30394E;
+  }
+</style>
 
-    <body class="hold-transition login-page">
+    <body class="hold-transition login-page" style="background-color: #ffffff;">
 <div class="login-box">
-  <div class="login-logo">
+  <!-- <div class="login-logo">
     <a href="{% url 'login' %}"><b>Student </b>Management System</a>
-  </div>
+  </div> -->
   <!-- /.login-logo -->
-  <div class="card">
+  <div class="card login-form">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign in to Student Management System</p>
+      <p class="login-box-msg">Sign in</p>
 
       <form action="{% url 'doLogin' %}" method="POST">
       {% csrf_token %}
@@ -33,7 +70,7 @@
         </div>
 
           <div class="col-12">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+            <button type="submit" class="btn btn-primary btn-block sign-button">Sign In</button>
           </div>
 
           {% comment %} <div class="col-12 text-center">
