--- a/student_management_app/templates/student_template/sidebar_template.html
+++ b/student_management_app/templates/student_template/sidebar_template.html
@@ -1,11 +1,11 @@
 {% load static %}
 
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar sidebar-dark-primary elevation-4" style="background-color: #040B14;">
       <!-- Brand Logo -->
       <a href="{% url 'student_home' %}" class="brand-link">
         <img src="{% static 'dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
             style="opacity: .8">
-        <span class="brand-text font-weight-light">Open university</span>
+        <span class="brand-text font-weight-light">University app</span>
       </a>
 
       <!-- Sidebar -->
